[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "itlmon"
version = "0.0.2"
authors = [
  { name="That Dev", email="sunny@thatone.ai" },
]
description = "Utility functions for provisioning"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "watchdog",
    "textual",
    "itllib@git+https://github.com/ThatOneAI/itllib",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]

